yaml/sts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: studentapp-db-svc
  labels:
    app: studentapp-db
spec:
  selector:
    app: studentapp-db
  ports:
    - port: 3306
      targetPort: 3306
